2003-05-04  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in, NEWS: release 2.3.2

2003-04-23  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "mk" to ALL_LINGUAS.

2003-04-06  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: release 2.3.1

2003-03-27  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 2.3.0.

2003-03-27  Mike Lei <mike.lei@sun.com>

	* configure.in: Added L10N Makefile support for cdplayer
	char-palette,command-line,geyes,gkb,gtik2_applet2,gweather
	mixer_applet2 mailcheck

	* Added L10N many doc files and Makefile.am for above applets

2003-03-26  Kevin Vandersloot <kfv101@psu.edu>

	* NEWS: update for 2.3.0 release

2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-03-09  Loban A Rahman  <loban@earthling.net>

	* README*: Updated some outdated READMEs.

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add mailcheck dir.

	* configure.in: generate mailcheck Makefiles.

	* screen-exec/*: sync with libegg.

2003-03-02  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in, MAINTAINERS, HACKING, README: update

2003-03-02  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in, Makefile.am: remove panel-menu applet completely. Bump version 
	to 2.3.0
	
	* autogen.sh: remove reference to sound-monitor
	
	* remove panel-menu, whereami, sound-monitor, screenshooter
	directories since they are used any more

2003-03-02  Takeshi AIHANA <aihana@gnome.gr.jp>

	* cdplayer/docs/ja/*.xml, cdplayer/docs/ja/figures/*.png,
	  cdplayer/docs/Makefile.am: Added new documents for GNOME 2.2
	  translated by KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* configure.in: added "cdplayer/docs/ja/Makefile" into AC_OUTPUT.
	* charpick/help/ja/*.xml, charpick/help/ja/figures/*.png,
	charpick/help/ja/Makefile.am: Added new documents for GNOME 2.2
	  translated by KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* configure.in: added "charpick/help/ja/Makefile" into AC_OUTPUT. 