@@ -598,7 +598,7 @@ show_error_dialog (MixerData *data)
 	}
 	data->error_dialog = gtk_message_dialog_new (NULL,
 					 GTK_DIALOG_DESTROY_WITH_PARENT,
-					 GTK_MESSAGE_ERROR, GTK_BUTTONS_CLOSE,
+					 GTK_MESSAGE_ERROR, GTK_BUTTONS_OK,
 					 ("Couldn't open mixer device %s\n"),
 					 data->device, NULL);
 
@@ -954,7 +954,7 @@ mixer_start_gmix_cb (BonoboUIComponent *uic,
 		dialog = gtk_message_dialog_new (NULL,
 						 GTK_DIALOG_DESTROY_WITH_PARENT,
 						 GTK_MESSAGE_ERROR,
-						 GTK_BUTTONS_CLOSE,
+						 GTK_BUTTONS_OK,
 						 _("There was an error executing '%s' : %s"),
 						 run_mixer_cmd,
 						 error->message);
@@ -1095,7 +1095,7 @@ show_help_cb (GtkWindow *dialog)
 				NULL,
 				GTK_DIALOG_DESTROY_WITH_PARENT,
 				GTK_MESSAGE_ERROR,
-				GTK_BUTTONS_CLOSE,
+				GTK_BUTTONS_OK,
 				_("There was an error displaying help: %s"),
 				error->message);
 
