@@ -1,3 +1,11 @@
+2003-05-04  Greg Merchan  <merchan@phys.lsu.edu>
+	* battstat/properties.c, cdplayer/cdplayer.c,
+	  drivemount/drivemount.c, drivemount/properties.c,
+	  mailcheck/mailcheck.c, mini-commander/src/preferences.c,
+	  mixer/mixer.c, multiload/main.c, wireless/wireless-applet.c
+	Change GTK_BUTTONS_CLOSE to GTK_BUTTONS_OK for HIG compliance.
+	Fixes bug 112185
+
 2003-05-04  Kevin Vandersloot <kfv101@psu.edu>
 
 	* configure.in, NEWS: release 2.3.2
